--- a/sleep-mainPages/pages/my/secondPage/interviewList.wxml
+++ b/sleep-mainPages/pages/my/secondPage/interviewList.wxml
@@ -1,6 +1,6 @@
 
 <view class="interviewList" wx:if="{{interviewData}}">
-    <view class="interviewList_li" wx:for="{{interviewData}}" wx:key="index" >
+    <view class="interviewList_li" wx:for="{{interviewData}}" wx:key="index" wx:if="{{role == 0}}">
         <view class="doctorInfo">
             <image class="doctorInfo_img" src="{{item.doctor_image}}"></image>
             <view class="doctorInfo_con">
@@ -13,9 +13,27 @@
             </view>
         </view>
         <view class="interviewList_li_button">
-            <view data-doctor_id="{{item.doctor_id}}" data-user_id="{{item.user_id}}" catchtap="mySeeReply">查看回复</view>
+            <!-- <view data-doctor_id="{{item.doctor_id}}" data-user_id="{{item.user_id}}" catchtap="mySeeReply">查看回复</view> -->
             <view data-id="{{item.id}}" catchtap="dialTel">电话咨询</view>
-            <view data-doctor_id="{{item.doctor_id}}" data-user_id="{{item.user_id}}" catchtap="mySaveInfo">留言</view>
+            <view data-doctor_id="{{item.doctor_id}}" data-user_id="{{item.user_id}}" catchtap="mySeeReply">留言</view>
+        </view>
+    </view>
+    <view class="interviewList_li" wx:for="{{interviewData}}" wx:key="index" wx:if="{{role == 1}}">
+        <view class="doctorInfo">
+            <image class="doctorInfo_img" src="{{item.user_image}}"></image>
+            <view class="doctorInfo_con">
+                <view>
+                    <text>{{item.user_name}}</text>
+                    <!-- <text>{{item.doctor_name}}</text> -->
+                </view>
+                <view>咨询日期：{{item.date}}</view>
+                <view>咨询时间：{{item.start_time}}</view>
+            </view>
+        </view>
+        <view class="interviewList_li_button">
+            <!-- <view data-doctor_id="{{item.doctor_id}}" data-user_id="{{item.user_id}}" catchtap="mySeeReply">查看回复</view> -->
+            <view data-id="{{item.id}}" catchtap="dialTel">电话咨询</view>
+            <view data-doctor_id="{{item.doctor_id}}" data-user_id="{{item.user_id}}" catchtap="mySeeReply">留言</view>
         </view>
     </view>
 </view>
