--- a/sleep-mainPages/pages/my/secondPage/seeReply.wxml
+++ b/sleep-mainPages/pages/my/secondPage/seeReply.wxml
@@ -1,24 +1,40 @@
-<view class="seeRrply">
-    <view wx:for="{{listData}}" wx:key="index">
-        <view class="seeRrply_user" wx:if="{{item.message_type == 1}}">
-            <image class="seeRrply_user_img" src="{{item.doctor_image}}"></image>
-            <view class="seeRrply_user_con">
-                <view>{{item.add_time}}</view>
-                <view>
-                    <image wx:if="{{item.type == 2}}" src="{{item.content}}" mode="aspectFit"></image>
-                    <text wx:if="{{item.type == 1}}">{{item.content}}</text>
+<view class="seeRrply" >
+    <view id="j_page" class="seeRrply_con {{speakNav?'seeRrply_con2':''}}" catchtap="speakHide" touchstart="speakHide" touchmove="speakHide">
+        <view wx:for="{{listData}}" wx:key="index" >
+            <view class="seeRrply_user" wx:if="{{item.message_type == 1}}">
+                <image class="seeRrply_user_img" src="{{item.doctor_image}}"></image>
+                <view class="seeRrply_user_con">
+                    <view>{{item.add_time}}</view>
+                    <view>
+                        <image wx:if="{{item.type == 2}}" src="{{item.content}}" mode="aspectFit"></image>
+                        <text wx:if="{{item.type == 1}}">{{item.content}}</text>
+                    </view>
                 </view>
+            </view>
+            <view class="seeRrply_doctor" wx:if="{{item.message_type == 0}}">
+                <view class="seeRrply_doctor_con">
+                    <view>{{item.add_time}}</view>
+                    <view>
+                        <image wx:if="{{item.type == 2}}" src="{{item.content}}" mode="aspectFit"></image>
+                        <text wx:if="{{item.type == 1}}">{{item.content}}</text>
+                    </view>
+                </view>
+                <image class="seeRrply_doctor_img" src="{{item.user_image}}"></image>
             </view>
         </view>
-        <view class="seeRrply_doctor" wx:if="{{item.message_type == 0}}">
-            <view class="seeRrply_doctor_con">
-                <view>{{item.add_time}}</view>
-                <view>
-                    <image wx:if="{{item.type == 2}}" src="{{item.content}}" mode="aspectFit"></image>
-                    <text wx:if="{{item.type == 1}}">{{item.content}}</text>
-                </view>
+    </view>
+
+    <view class="speak {{speakNav?'speakNav':''}}">
+        <view class="speak_input">
+            <image catchtap="speakShow"  src="/assets/images/speak1.jpg"></image>
+            <input type="text" placeholder="请输入内容..." value='{{mycontent}}' bindblur="bindTextAreaBlur"/>
+            <view catchtap="saveinfo_submit">发送</view>
+        </view>
+        <view class="speak_nav">
+            <view catchtap="uploadImg">
+                <image src="/assets/images/speak2.jpg"></image>
+                <text>图片</text>
             </view>
-            <image class="seeRrply_doctor_img" src="{{item.user_image}}"></image>
         </view>
     </view>
 </view>
