20210617更新上午10点
用户反馈提交功能的接口对接，以及提示文字后台调取显示

--- a/sleep-mainPages/pages/my/secondPage/secondPage.wxml
+++ b/sleep-mainPages/pages/my/secondPage/secondPage.wxml
@@ -6,8 +6,8 @@
 
 <view wx:if="{{title == '帮助中心'}}">
   <textarea placeholder-class="plh" bindblur="textareaBlur" value="{{textarea}}"
-    placeholder="告诉我们你所希望看到的改进，或是你所遇到的问题"></textarea>
-  <input placeholder-class="plh" bindblur="inputBlur" type="text" value="{{email}}" placeholder="请留下你的邮箱，谢谢" />
+    placeholder="{{ti[0]}}"></textarea>
+  <input placeholder-class="plh" bindblur="inputBlur" type="text" value="{{email}}" placeholder="{{ti[1]}}" />
   <view class="del_btn" catchtap="submit">提交反馈</view>
 </view>
 <view wx:if="{{title == '隐私政策'}}" class="secret">
