--- a/sleep-mainPages/pages/my/secondPage/secondPage.wxss
+++ b/sleep-mainPages/pages/my/secondPage/secondPage.wxss
@@ -47,9 +47,11 @@ input {
   border: 1rpx solid #eee;
   margin: 20rpx auto 0;
   font-size: 26rpx;
+  box-sizing: border-box;
+  padding-left: 24rpx;
 }
 
 .plh {
   font-size: 26rpx;
-  padding-left: 24rpx;
+  /* padding-left: 24rpx; */
 }
